fix up spacing for ticket dashboard

--- a/plugins/tickets/src/modules/blocks/ticket/dashboard/style.pcss
+++ b/plugins/tickets/src/modules/blocks/ticket/dashboard/style.pcss
@@ -1,5 +1,6 @@
 .tribe-editor__action-dashboard.tribe-editor__ticket__dashboard {
 	display: none;
+	padding-top: 0;
 	margin: 0;
 	bottom: 0;
 
